# optimal-mixture-markov

./: .gitignore  Clustering.py  LICENSE  README.md  Synthetic.py  ablation1.py  ablation2.py  ablation3.py  ablation4.py  environment.yml  main.py  main_lastfm1k.py  main_synthetic.py  mdpmix_stage1_subspace.py  mdpmix_stage2_clustering.py  mdpmix_stage3_em.py  mdpmix_three_stage.py  plot.ipynb  plot_utils.py  pyproject.toml  requirements.txt  results.csv  runall.sh  setup_env.sh  tmp.sh  utils.py
__pycache__/: mdpmix_stage1_subspace.get_empirical_transition_matrix-21.py311.1.nbc  mdpmix_stage1_subspace.get_empirical_transition_matrix-21.py311.nbi  mdpmix_stage1_subspace.get_empirical_transition_matrix-21.py313.1.nbc  mdpmix_stage1_subspace.get_empirical_transition_matrix-21.py313.nbi  mdpmix_stage3_em.compute_transition_counts-21.py311.1.nbc  mdpmix_stage3_em.compute_transition_counts-21.py311.2.nbc  mdpmix_stage3_em.compute_transition_counts-21.py311.nbi  mdpmix_stage3_em.compute_transition_counts-21.py313.1.nbc  mdpmix_stage3_em.compute_transition_counts-21.py313.2.nbc  mdpmix_stage3_em.compute_transition_counts-21.py313.nbi
mcmix/: clustering.py  emalg.py  helpers.py  kausik_original.py  subspace.py
results/: ablation1_results_raw.csv  ablation1_results_summary.csv  ablation2_results_unknownK_raw.csv  ablation2_results_unknownK_summary.csv  ablation2_runtime_summary.csv  ablation2_runtime_vs_S_raw.csv  ablation2_runtime_vs_T_raw.csv  ablation3_results_unknownK_raw.csv  ablation3_results_unknownK_summary.csv  ablation4_error_vs_H_raw.csv  results.csv  (+5 more)
