[project]
name = "optimal-mixture-markov"
version = "0.1.0"
description = "Near-Optimal Clustering in Mixture of Markov Chains (AISTATS 2026)"
authors = [
    {name = "Junghyun Lee", email = "junghyun@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.16.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.7.0",
    "numba>=0.61.0",
    "joblib>=1.5.0",
    "tqdm>=4.67.0",
    "cloudpickle>=3.1.0",
    "gymnasium>=1.2.0",
    "farama-notifications>=0.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]
